# tower/src/main/resources/openapi-spec-file/eraldy/api/openapi.yaml
@@ -938,7 +938,7 @@ paths:
             application/json:
               schema:
                 items:
-                  $ref: '#/components/schemas/OrganizationUser'
+                  $ref: '#/components/schemas/User'
                 type: array
           description: Ok
         "401":
@@ -1475,7 +1475,7 @@ paths:
       x-accepts: text/html
   /list/{listIdentifier}/import:
     post:
-      operationId: listImportPost
+      operationId: listListImportPost
       parameters:
       - description: A list identifier (guid)
         explode: false
@@ -1494,19 +1494,90 @@ paths:
                 contentType: text/csv
                 style: form
             schema:
-              $ref: '#/components/schemas/listImportPost_request'
+              $ref: '#/components/schemas/listListImportPost_request'
         description: The file containing the users to import
         required: true
       responses:
         "200":
-          description: List of users
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ListImportPostResponse'
+          description: The import job id
       security:
       - apiKeyAuth: []
       - cookieAuth: []
-      summary: Import users in a list
+      summary: Submit an import of users for a list
       tags:
       - list
       x-content-type: multipart/form-data
+      x-accepts: application/json
+  /list/{listIdentifier}/imports:
+    get:
+      operationId: listListImportsGet
+      parameters:
+      - description: A list identifier (guid)
+        explode: false
+        in: path
+        name: listIdentifier
+        required: true
+        schema:
+          example: lis-xjkkLmi
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/ListImportJobStatus'
+                type: array
+          description: The import jobs
+      security:
+      - apiKeyAuth: []
+      - cookieAuth: []
+      summary: A list of imports
+      tags:
+      - list
+      x-accepts: application/json
+  /list/{listIdentifier}/import/{jobIdentifier}/details:
+    get:
+      operationId: listListImportJobDetailsGet
+      parameters:
+      - description: A list identifier (guid)
+        explode: false
+        in: path
+        name: listIdentifier
+        required: true
+        schema:
+          example: lis-xjkkLmi
+          type: string
+        style: simple
+      - description: A import identifier
+        explode: false
+        in: path
+        name: jobIdentifier
+        required: true
+        schema:
+          example: lis-xjkkLmi
+          type: string
+        style: simple
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                items:
+                  $ref: '#/components/schemas/ListImportJobRowStatus'
+                type: array
+          description: The import jobs
+      security:
+      - apiKeyAuth: []
+      - cookieAuth: []
+      summary: The list of emails with their import status
+      tags:
+      - list
       x-accepts: application/json
   /list/{listIdentifier}/registrations:
     get:
@@ -1732,6 +1803,73 @@ components:
       description: The data needed to create or update a list
       required: true
   schemas:
+    ListImportPostResponse:
+      description: |
+        The succesful response to the submission of a import job for a list
+      example:
+        jobIdentifier: xmmmN
+      properties:
+        jobIdentifier:
+          description: The job id
+          example: xmmmN
+          type: string
+      type: object
+    ListImportJobRowStatus:
+      description: |
+        This object represents the status of a row in a import job for a list.
+      example:
+        emailAddress: emailAddress
+        statusMessage: statusMessage
+        statusCode: 0.8008281904610115
+      properties:
+        emailAddress:
+          description: The email to import
+          type: string
+        statusCode:
+          description: "0 if imported, other otherwise"
+          type: number
+        statusMessage:
+          description: A message
+          type: string
+      type: object
+    ListImportJobStatus:
+      description: |
+        This object represents the status of a job that imports users for a list.
+      example:
+        jobId: xmmmN
+        creationTime: 2000-01-23T04:56:07.000+00:00
+        countTotal: 6
+        countFailure: 1
+        statusMessage: statusMessage
+        processingTime: 2000-01-23T04:56:07.000+00:00
+        statusCode: 0
+      properties:
+        jobId:
+          description: The job id
+          example: xmmmN
+          type: string
+        statusCode:
+          description: "The status code: -2: queued, -1: processing, 0: done, other:\
+            \ fatal error"
+          type: integer
+        statusMessage:
+          description: A description of any fatal error if any
+          type: string
+        countTotal:
+          description: The number of rows processed
+          type: integer
+        countFailure:
+          description: The number of rows with failures or validation errors.
+          type: integer
+        creationTime:
+          format: date-time
+          type: string
+        processingTime:
+          format: date-time
+          type: string
+      required:
+      - jobId
+      type: object
     AuthEmailPost:
       description: "A auth post object based on email to register, get a magic link,\
         \ ..."
@@ -3303,7 +3441,7 @@ components:
       - loginRealm
       title: The password credentials object
       type: object
-    listImportPost_request:
+    listListImportPost_request:
       properties:
         fileBinary:
           description: The file
